# pybitesbooks

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python-app.yml
api/: urls.py  views.py
books/: admin.py  forms.py  goodreads.py  googlebooks.py  models.py  tasks.py  urls.py  views.py
goal/: apps.py  models.py  views.py
lists/: admin.py  mixins.py  models.py  urls.py  views.py
myreadinglist/: celery.py  mail.py  settings.py  test_settings.py  urls.py  views.py
myreadinglist/management/commands/: stats.py  update_categories.py
pomodoro/: apps.py  models.py  urls.py  views.py
slack/: urls.py  views.py
tests/: conftest.py  test_books.py
